--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/balotaje.loader.js";
       var config = {
-        dataUrl: buildUrl + "/balotaje.data",
-        frameworkUrl: buildUrl + "/balotaje.framework.js",
-        codeUrl: buildUrl + "/balotaje.wasm",
+        dataUrl: buildUrl + "/balotaje.data.unityweb",
+        frameworkUrl: buildUrl + "/balotaje.framework.js.unityweb",
+        codeUrl: buildUrl + "/balotaje.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "balotaje2023",
